# bitloop

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  VSWorkspaceSettings.json  bitloop  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
cmake/: bitloop-vcpkg.cmake
cmake/toolchain/: vcpkg_wrapper.cmake
examples/: CMakeLists.txt
examples/Airhockey/: CMakeLists.txt
examples/Airhockey/Airhockey/: Airhockey.cpp  Airhockey.h
examples/Cardioid/: CMakeLists.txt  vcpkg-configuration.json
examples/Cardioid/Cardioid/: Cardioid.cpp  Cardioid.h
examples/Mandelbrot/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
examples/Mandelbrot/Mandelbrot/: Mandelbrot.cpp  Mandelbrot.h  kernel.h  shading.h  types.h
examples/Test1/: CMakeLists.txt  vcpkg-configuration.json
examples/Test1/Test1/: Test1.cpp  Test1.h
examples/Test2/: vcpkg-configuration.json
examples/Test2/Test2/: Test2.cpp  Test2.h
examples/Tiger/: CMakeLists.txt  CMakePresets.json
examples/Tiger/Tiger/: Tiger.cpp  Tiger.h  draw_tiger.h
examples/Tiger/cmake/toolchain/: vcpkg_autodetect.cmake
examples/test_sim/: CMakeLists.txt  CMakePresets.json  test_sim.cpp  vcpkg-configuration.json  vcpkg.json
examples/test_sim/test_sim/: test_sim.cpp  test_sim.h
examples/test_sim2/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
examples/test_sim2/src/: test_sim2.h
examples/test_sim2/test_sim2/: test_sim2.cpp  test_sim2.h
framework/: CMakeLists.txt  bitloopConfig.cmake.in  bitloopSimulation.cmake
framework/include/bitloop/: bitloop.h
framework/include/bitloop/core/: camera.h  config.h  debug.h  event.h  main_window.h  platform.h  platform_macros.h  project.h  project_worker.h  threads.h  types.h  var_buffer.h
framework/include/bitloop/graphics/: nano_bitmap.h  nano_canvas.h
framework/include/bitloop/ui/: imgui_custom.h  imgui_debug_ui.h  imgui_gradient_edit.h  imgui_log.h  imgui_splines.h
framework/include/bitloop/utility/: change_tracker.h  color.h  compression.h  constexpr_dispatch.h  float128.h  helpers.h  json.h  math_helpers.h
framework/src/: bitloop.cpp  bitloop_main.cpp  webm_encode.cpp
framework/src/core/: camera.cpp  event.cpp  main_window.cpp  platform.cpp  project.cpp  project_worker.cpp  threads.cpp  types.cpp
framework/src/graphics/: nano_bitmap.cpp  nano_canvas.cpp
framework/src/ui/: imgui_custom.cpp  imgui_gradient_edit.cpp
framework/src/utility/: compression.cpp  helpers.cpp  json.cpp
framework/templates/default/: CMakeLists.txt
framework/templates/default/SIM_NAME/: SIM_NAME.cpp  SIM_NAME.h
scripts/: apt-deps.txt  bootstrap-deps.sh  bootstrap.bat  bootstrap.py  bootstrap.sh  cli.py  install_dev_port.bat  new_project.py
vcpkg-ports/ports/bitloop/: portfile.cmake  vcpkg.json
